apps/echo-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: echo-service
spec:
  type: ClusterIP
  selector:
    app: echo-service
  ports:
    - name: http
      port: 80
      targetPort: 5678
